Fix wrap

--- a/src/components/CardItem/styles.css
+++ b/src/components/CardItem/styles.css
@@ -3,11 +3,13 @@
     display: flex;
     gap: 1em;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .card {
     background-color: rgb(255,255,255);
     border: 1px solid rgb(236, 236, 236);
+    margin-bottom: 1em;
     width: 8em;
     padding: 0.5em;
     box-shadow: 0 3px 5px rgba(145, 145, 145, 0.171);
