--- a/src/components/SectionBox/styles.css
+++ b/src/components/SectionBox/styles.css
@@ -13,6 +13,7 @@ h2 {
 }
 
 .section-box {
+    height: 17em;
     background-color: rgb(255,255,255);
     width: 65%;
     color: rgb(0, 0, 0);
@@ -23,4 +24,5 @@ h2 {
     /* justify-content: space-around; */
     padding: 2em;
     flex-direction: column;
+    overflow: hidden;
 }
